# sensecap-openwrt-feed

./: .config  .gitmodules  README.md  feeds.conf.default
.github/workflows/: build.yml
feeds/lorawan-gateway/basicstation_ubus/: Makefile
feeds/lorawan-gateway/cellular/: Makefile
feeds/lorawan-gateway/cellular/files/: 99_lte_serve  lte-serve  lte-serve.init
feeds/lorawan-gateway/hardware-info/: Makefile  note.md  write_eeprom.sh
feeds/lorawan-gateway/hardware-info/files/: 10_hardware_info  99-fix-distfeeds  hardware-info.init  hardware_info.init
feeds/lorawan-gateway/hardware-info/src/: Makefile  hardware_info.c
feeds/lorawan-gateway/lora/: Cargo.toml  Makefile
feeds/lorawan-gateway/lora/files/: basicstation.config  lora.config
feeds/lorawan-gateway/lorawan-gateway/: Makefile
feeds/lorawan-gateway/luci-app-chirpstack-concentratord-target-seeed-gateway/: Makefile
feeds/lorawan-gateway/packetforwarder/: Makefile
feeds/lorawan-gateway/rs485-modbus/: Cargo.toml  Makefile
feeds/lorawan-gateway/rs485-modbus/files/: rs485-modbus.init
feeds/lorawan-gateway/rs485-modbus/src/: main.rs
feeds/lorawan-gateway/rs485-module/: Cargo.toml
feeds/lorawan-gateway/rs485-mqtt-bridge/: Cargo.toml  Makefile
feeds/lorawan-gateway/ups-module/: Makefile
feeds/lorawan-gateway/wifi-module/: Makefile  README.md
feeds/luci-lorawan-gateway/luci-app-gateway/: Makefile
feeds/luci-lorawan-gateway/luci-app-ota/: Makefile
feeds/luci-lorawan-gateway/luci-app-routing/: Makefile
feeds/luci-lorawan-gateway/luci-app-terminal/: Makefile
(+63 files in other folders)
