[package]
name = "rs485-modbus"
version = "1.0.0"
edition = "2021"

[dependencies]
rumqttc = { version = "0.24", features = ["websocket"] }
tokio = { version = "1", features = ["full"] }
tokio-serial = "5.4"
tokio-modbus = { version = "0.14", features = ["rtu", "tcp"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = "0.4"
rustls-pemfile = "2.2"
webpki-roots = "0.26"
